# agent-s3

./: .agent_s3_ws_connection.json  .eslintignore  .eslintrc.js  .gitignore  =0.2  =0.22.0  =0.5.0  =0.9.1  =1.24.0  =1.7.0  =1.8  =11.0  =2.0.0  =2.25.0  =2.9.0  =4.0.0  =41.0.0  =6.0  =8.0  AGENTS.md  CHANGELOG.md  CHECKPOINTS.md  CLAUDE.md  CONTRIBUTING.md  CONVERSATION_RESET_IMPLEMENTATION.md  DEBUGGING.md  DEPENDENCIES.md  DEPENDENCY_COMPLETION_REPORT.md  DEPLOYMENT_MANUAL.md  ERRORS.md  LICENSE  LOGIC_GAP_ANALYSIS.md  MERGE_CONFLICT_RESOLUTION.md  PLAYWRIGHT.md  README.md  README.tree-sitter-setup 2.md  README.tree-sitter-setup.md  RELEASE_NOTES.md  STATIC_PLAN_CHECKER.md  STORIES.md  (+98 more)
.github/: copilot-instructions.md
agent_s3/: __init__.py  architecture_review_validation_summary.md  auth.py  cli.py  code_generator.py  code_validator.py  command_processor.py  common_utils.py  complexity_analyzer.py  compression.py  config.py  config.py.bak  config.py.rej  context_manager.py  coordinator.py  database_manager.py  debug_utils.py  debugging_integration_summary.md  debugging_manager.py  deployment_manager.py  design_manager.py  enhanced_scratchpad_manager.py  error_handler 2.py  error_handler.py  errors.py  feature_group_processor 2.py  feature_group_processor.py  file_history_analyzer.py  implementation_manager.py  integration_plan.md  json_utils.py  llm_entry_schema.json  llm_utils.py  logging_utils.py  pattern_constants.py  planner.py  planner_json_enforced.py  planner_json_enforced.py.backup  planner_json_enforced.pyi  planning_helper.py  (+29 more)
agent_s3.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
docs/: context_management.md  debugging_and_error_handling.md  development_guidelines.md  implementation_summary.md  incremental_indexing.md  manual_http_timeout_test.md  migration_guide.md  pre_planning_workflow.md  streaming_ui_implementation.md  summarization 2.md  supabase_llm_function.md  test_spec_validation.md  tree-sitter-modernization-summary.md  unified_context_management.md
examples/: incremental_indexing_example 2.py  incremental_indexing_example.py  s3_upload_download_example.py
scripts/: README.md  cleanup.py  lint_and_fix.py  maintenance.py  run_tests.sh
system_tests/: __init__ 2.py  __init__.py  conftest 2.py  conftest.py  mock_llm 2.py  mock_llm.py  test_agent_workflow 2.py  test_agent_workflow.py  test_context_aware_planning.py  test_design_workflow.py  test_error_recovery.py  test_multi_step_workflow.py
tests/: __init__.py  conftest.py  test_advanced_workflows 2.py  test_advanced_workflows.py  test_architectural_validation 2.py  test_architectural_validation.py  test_ast_tool 2.py  test_ast_tool.py  test_auth_redaction.py  test_auth_token_encryption.py  test_bash_tool_network.py  test_checkpoint_manager.py  test_checkpoint_versioning 2.py  test_checkpoint_versioning.py  test_cli 2.py  test_cli.py  test_cli_tool_user_confirmation.py  test_cli_tool_user_property.py  test_code_analysis_tool.py  test_code_generator.py  test_code_generator_agentic 2.py  test_code_generator_agentic.py  test_code_generator_complexity 2.py  test_code_generator_complexity.py  test_code_generator_json_plan 2.py  test_code_generator_json_plan.py  test_command_processor 2.py  test_command_processor.py  test_compression 2.py  test_compression_fixed.py  test_compression_updated.py  test_config_pydantic.py  test_consolidated_workflow.py  test_context_manager_paths.py  test_coordinator_coverage_improvements.py  test_coordinator_debugging.py  test_coordinator_facade_methods.py  test_coordinator_implementation_methods.py  test_coordinator_json_preplanning.py  test_coordinator_merged 2.new  (+113 more)
tests_backup_20250526_224723/: test_bash_tool_blocking.py  test_bash_tool_network.py  test_cli.py  test_code_generator_agentic.py  test_compression_fixed.py  test_compression_updated.py  test_config_pydantic.py  test_coordinator_implementation_methods.py  test_coordinator_json_preplanning.py  (+22 more)
(+435 files in other folders)
