[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-s3"
version = "0.1.1"
description = "A state-of-the-art AI coding agent with GitHub issue tracking"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Agent-S3 Team", email = "agent-s3@example.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Code Generators",
]
dependencies = [
    "requests>=2.25.0",
    "pytest>=6.2.0",
    "gptcache>=1.0.0",
    "sqlalchemy>=2.0.0",
    "jsonschema>=4.0.0",
    "supabase-py",
]

[project.optional-dependencies]
postgresql = ["psycopg2-binary>=2.9.0"]
mysql = ["pymysql>=1.0.0"]

[project.scripts]
agent-s3 = "agent_s3.cli:main"

[project.urls]
"Homepage" = "https://github.com/agent-s3/agent-s3"
"Bug Tracker" = "https://github.com/agent-s3/agent-s3/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
