[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-s3"
version = "0.1.1"
description = "A state-of-the-art AI coding agent with GitHub issue tracking"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Agent-S3 Team", email = "agent-s3@example.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Code Generators",
]
dependencies = [
    # Core dependencies
    "requests>=2.25.0",
    "pydantic>=2.0.0",
    "sqlalchemy>=2.0.0",
    "jsonschema>=4.0.0",
    "cryptography>=41.0.0",
    "python-dotenv>=1.0.0",
    "psutil>=5.9.0",
    "toml>=0.10.2",
    "pyyaml>=6.0",
    "libcst>=0.4.0",
    
    # Tree-sitter requirements
    "tree-sitter>=0.22.0",
    "tree-sitter-python>=0.21.0",
    "tree-sitter-javascript>=0.21.0",
    "tree-sitter-typescript>=0.21.0",
    "tree-sitter-php>=0.22.0",
    
    # AI/ML dependencies
    "gptcache>=0.1.44",
    "faiss-cpu>=1.7.0",
    "numpy>=1.24.0",
    "tiktoken>=0.5.0",
    "rank-bm25>=0.2",
    
    # Web framework and communication
    "fastapi>=0.95.0",
    "uvicorn>=0.22.0",
    "websockets>=11.0",
    "flask>=2.3.0",
    
    # AWS and cloud services
    "boto3>=1.24.0",
    "botocore>=1.27.0",
    
    # GitHub integration
    "PyGithub>=2.1.1",
    "PyJWT>=2.6.0",
    
    # File monitoring and utilities
    "watchdog>=3.0.0",
    
    # Testing framework
    "pytest>=6.2.0",
    
    # Supabase integration
    "supabase>=2.0.0",
]

[project.optional-dependencies]
postgresql = ["psycopg2-binary>=2.9.0"]
mysql = ["pymysql>=1.0.0"]
tokenizers = ["tiktoken>=0.5.0"]

[project.scripts]
agent-s3 = "agent_s3.cli:main"

[project.urls]
"Homepage" = "https://github.com/agent-s3/agent-s3"
"Bug Tracker" = "https://github.com/agent-s3/agent-s3/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py310"
exclude = [
    ".git",
    "node_modules",
    "build",
    "__pycache__",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
ignore_missing_imports = true
no_implicit_optional = false
ignore_errors = true
files = ["agent_s3/compression.py"]
